compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__record_updates-5.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub type Car { Car(make: String, model: String, driver: Person) }\npub type Person { Person(name: String, age: Int) }\n\nfn main() {\n    let car = Car(make: \"Amphicar\", model: \"Model 770\", driver: Person(name: \"John Doe\", age: 27))\n    let new_p = Person(..car.driver, age: 28)\n    new_p\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export_type([car/0, person/0]).

-type car() :: {car, binary(), binary(), person()}.

-type person() :: {person, binary(), integer()}.

-spec main() -> person().
main() ->
    Car = {car,
           <<"Amphicar"/utf8>>,
           <<"Model 770"/utf8>>,
           {person, <<"John Doe"/utf8>>, 27}},
    New_p = erlang:setelement(3, erlang:element(4, Car), 28),
    New_p.

