compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__recursive_type.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  id(id)\n}\n"
---
----- SOURCE CODE

fn id(x) {
  x
}

pub fn main() {
  id(id)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec id(I) -> I.
id(X) ->
    X.

-spec main() -> fun((M) -> M).
main() ->
    id(fun id/1).
