compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__type_named_else.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub type Else {\n  Else\n}\n\npub fn main() {\n  Else\n}\n"
---
----- SOURCE CODE

pub type Else {
  Else
}

pub fn main() {
  Else
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).
-export_type(['else'/0]).

-type 'else'() :: 'else'.

-spec main() -> 'else'().
main() ->
    'else'.
